# etrix

./: .dockerignore  README.md  _config.yml  docker-compose.yaml  index.html  pyproject.toml  styles.css
_layouts/: default.html  post.html
app/: Dockerfile  README.md  main.py  requirements.txt
app/templates/: _bitcoin_balance_shell.html  _profile_edit_shell.html  bitcoin_balance.html  index.html  issue_etr_confirm.html  login.html  logout_confirm.html  overview.html  profile_edit.html  profile_edit_fragment.html  query_etr_result.html
docs/posts/: INDEX.md  REPO_INDEX.md  index.html  introducing-openetr.md  post-template.md
docs/specs/: CANONICAL_ETR_TRANSACTION_SPEC.md  EVENT_KIND_REGISTRY.md  INDEX.md  MULTI_MODALITY_ARCHITECTURE_NOTE.md  RELAY_BACKED_CONFIGURATION_DESIGN_NOTE.md  SILENT_PAYMENTS_DESIGN_NOTE.md  STATE-TRANSITION.md  TAPROOT_WALLET_AND_SEND_FLOW.md  TITLE_TRANSFER_AUTHORITY_REPLACEABLE_EVENT_SPEC.md  TITLE_TRANSFER_AUTHORITY_TRUST_ASSUMPTIONS.md  TRANSFER_VALIDATION_GUARDS_DESIGN_NOTE.md
etrix/: cli.py
examples/: ebl.md  ebl2.md  ebl3.md  ebl5.md
openetr/: bitcoin.py  cli.py  config.py  defaults.yaml  guards.py  helpers.py  mletr_trivia.yaml  silent_payments.py
openetr/commands/: core.py  publish.py  query.py
openetr/services/: __init__.py  issue_etr.py  profile_admin.py  profile_publish.py  query_etr.py
scripts/: nsec_to_bitcoin_address.py
